# HoopFlex

./: .env.example  .gitignore  App.js  GITHUB_SETUP.md  Makefile  README.md  app.json  docker-compose.yml  firebaseConfig.js  install-all.ps1  package-lock.json  package.json  run-tests.ps1  start-backend.ps1  start-frontend.ps1
HoopFlex/: .eslintrc.json  Nota  OFFLINE_SYNC_FASTAPI.md  app.json  package.json
HoopFlex/.github/workflows/: ci.yml
HoopFlex/services/: api.js
hoopflex-backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.py
hoopflex-backend/dao/: achievementsDAO.py  logsDAO.py  routinesDAO.py  syncDAO.py  userProfileDAO.py
hoopflex-backend/logic/: achievementUnlocker.py
hoopflex-backend/models/: achievementModel.py  logsModel.py  routineModel.py  syncModel.py  unlockedAchievementModel.py  userProfileModel.py
hoopflex-backend/routers/: achievementsRouter.py  logsRouter.py  routinesRouter.py  syncRouter.py  userProfileRouter.py
navigation/: BottomTabNavigator.js
screens/: Exercises.js  HomePage.js  LoginScreen.js  Profile.js  SignUpScreen.js  TrainingDetails.js
