[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoopflex-backend"
version = "1.0.0"
description = "HoopFlex FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "pydantic",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "bandit",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
